[gd_scene load_steps=9 format=3 uid="uid://q1ko4jalsk8x"]

[ext_resource type="PackedScene" path="res://Main/HUD/hud.tscn" id="1"]
[ext_resource type="PackedScene" path="res://Conversation/conversation.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://ot6f8q0oyu7k" path="res://GameEngine/main.tscn" id="4"]
[ext_resource type="Script" path="res://Main/main.gd" id="5"]
[ext_resource type="FontFile" uid="uid://cr1qh7rdfmxv" path="res://Fonts/adventure-font.ttf" id="5_6ha3e"]
[ext_resource type="Texture2D" uid="uid://by0nrn4xh0r2w" path="res://Main/splash.png" id="6"]
[ext_resource type="StyleBox" uid="uid://bp6q1qokehnen" path="res://Main/button_style.tres" id="6_hvlal"]
[ext_resource type="AudioStream" uid="uid://dpj8640jqd2on" path="res://Main/theme-music.mp3" id="7"]

[node name="Main" instance=ExtResource("4")]
script = ExtResource("5")

[node name="ColorRect" parent="." index="1"]
offset_left = -3131.0
offset_top = -3036.0
offset_right = 2869.0
offset_bottom = 2964.0
grow_horizontal = 2
grow_vertical = 2

[node name="Splash" type="CanvasLayer" parent="." index="2"]
layer = 3

[node name="Sprite2D" type="Sprite2D" parent="Splash" index="0"]
scale = Vector2(1.12402, 1.08)
texture = ExtResource("6")
centered = false

[node name="Timer" type="Timer" parent="Splash" index="1"]

[node name="Music" type="AudioStreamPlayer2D" parent="Splash" index="2"]
stream = ExtResource("7")

[node name="MainMenu" type="CanvasLayer" parent="." index="3"]
layer = 3

[node name="NewGame" type="Button" parent="MainMenu" index="0"]
offset_left = 384.0
offset_top = 464.0
offset_right = 727.0
offset_bottom = 588.0
theme_override_fonts/font = ExtResource("5_6ha3e")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = ExtResource("6_hvlal")
text = "New Game"

[node name="Load" type="Button" parent="MainMenu" index="1"]
offset_left = 64.0
offset_top = 192.0
offset_right = 408.0
offset_bottom = 320.0
theme_override_fonts/font = ExtResource("5_6ha3e")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = ExtResource("6_hvlal")
text = "Load Game"

[node name="Save" type="Button" parent="MainMenu" index="2"]
offset_left = 728.0
offset_top = 192.0
offset_right = 1072.0
offset_bottom = 320.0
theme_override_fonts/font = ExtResource("5_6ha3e")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = ExtResource("6_hvlal")
text = "Save Game"

[node name="Died" type="CanvasLayer" parent="." index="4"]
layer = 3

[node name="Label" type="Label" parent="Died" index="0"]
offset_left = 408.0
offset_top = 192.0
offset_right = 728.0
offset_bottom = 320.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("5_6ha3e")
theme_override_font_sizes/font_size = 48
text = "You died!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="Died" index="1"]
wait_time = 5.0
one_shot = true

[node name="HUD" parent="." index="5" instance=ExtResource("1")]

[node name="Conversation" parent="." index="6" instance=ExtResource("2")]
offset = Vector2(515, 499)
scale = Vector2(1, 1)
transform = Transform2D(1, 0, 0, 1, 515, 499)

[connection signal="timeout" from="Splash/Timer" to="." method="_on_Splash_Timer_timeout"]
[connection signal="pressed" from="MainMenu/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="MainMenu/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="MainMenu/Save" to="." method="_on_Save_pressed"]
